Returning sRGB from CG color space functions on failure is too error prone https://bugs.webkit.org/show_bug.cgi?id=221676

Reviewed by Darin Adler.

Source/WebCore:

* platform/graphics/cg/ColorCG.cpp:
(WebCore::leakCGColor):
Switch to checking for nullptr rather than sRGB and be explicit about where we can
and cannot use conversion to ExtendedSRGB, rather than the old behavior where we
would secretly use sRGB on platforms without ExtendedSRGB and expect CG to clamp for
us.

* platform/graphics/cg/ColorSpaceCG.cpp:
(WebCore::sRGBColorSpaceRef):
(WebCore::adobeRGB1998ColorSpaceRef):
(WebCore::displayP3ColorSpaceRef):
(WebCore::extendedSRGBColorSpaceRef):
(WebCore::ITUR_2020ColorSpaceRef):
(WebCore::labColorSpaceRef):
(WebCore::linearSRGBColorSpaceRef):
(WebCore::ROMMRGBColorSpaceRef):
(WebCore::xyzColorSpaceRef):
* platform/graphics/cg/ColorSpaceCG.h:
(WebCore::cachedNullableCGColorSpace):
(WebCore::cachedCGColorSpace):
Rename cachedCGColorSpace to cachedNullableCGColorSpace to indicate that it can
now return nullptr for unsupported color spaces. Add explicit guards around color
space accessors to ensure they are only called on platforms where they are known
to be supported.

* platform/graphics/cg/GradientCG.cpp:
(WebCore::Gradient::createCGGradient):
Be explicit about which color space is being used for the gradien when extended colors are present.
This is the same behavior as before, but previously it would happen silently beneath extendedSRGBColorSpaceRef()
which is a suprising result.

Source/WTF:

* wtf/PlatformHave.h:
Add specific macros for color spaces supported by Core Graphics.


Canonical link: https://commits.webkit.org/233976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272736 268f45cc-cd09-0410-ab3c-d52691b4dbfc