Source/WebCore/platform/graphics/cg/ColorCG.cpp
@@ -98,20 +98,26 @@ static CGColorRef leakCGColor(const Color& color)
 {
     auto [colorSpace, components] = color.colorSpaceAndComponents();
 
-    auto cgColorSpace = cachedCGColorSpace(colorSpace);
+    auto cgColorSpace = cachedNullableCGColorSpace(colorSpace);
 
     // Some CG ports don't support all the color spaces required and return
-    // sRGBColorSpaceRef() for unsupported color spaces. In those cases, we
-    // need to eagerly convert the color into extended sRGB ourselves before
-    // creating the CGColorRef.
-    // FIXME: This is not a good way to indicate lack of support. Make this
-    // more explicit.
-    if (colorSpace != ColorSpace::SRGB && cgColorSpace == sRGBColorSpaceRef()) {
+    // nullptr for unsupported color spaces. In those cases, we eagerly convert
+    // the color into either extended sRGB or normal sRGB, if extended sRGB is
+    // not supported, before creating the CGColorRef.
+    if (!cgColorSpace) {
+#if HAVE(CORE_GRAPHICS_EXTENDED_SRGB_COLOR_SPACE)
         auto colorConvertedToExtendedSRGBA = callWithColorType(components, colorSpace, [] (const auto& color) {
             return convertColor<ExtendedSRGBA<float>>(color);
         });
         components = asColorComponents(colorConvertedToExtendedSRGBA);
         cgColorSpace = extendedSRGBColorSpaceRef();
+#else
+        auto colorConvertedToSRGBA = callWithColorType(components, colorSpace, [] (const auto& color) {
+            return convertColor<SRGBA<float>>(color);
+        });
+        components = asColorComponents(colorConvertedToSRGBA);
+        cgColorSpace = sRGBColorSpaceRef();
+#endif
     }
 
     auto [r, g, b, a] = components;
